--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_svg: ^0.17.4
   keystore:
     path: ../keystore/keystore-dart
+  path_provider: ^1.6.5
 
 dev_dependencies:
   flutter_test:
