--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test: ^1.3.0
+  pedantic: ^1.8.0
 
 flutter:
   uses-material-design: true
