some basic layouts

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   keystore:
     path: packages/keystore_ffi
   path_provider: ^1.6.5
+  flutter_screenutil: ^1.1.0
 
 dev_dependencies:
   flutter_test:
