--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,15 @@ dependencies:
   path_provider: ^1.6.5
   flutter_screenutil: ^1.1.0
   provider: ^4.1.0
+  injectable: ^0.3.0
+  get_it: ^4.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic: ^1.8.0
+  injectable_generator: ^0.3.5
+  build_runner: ^1.9.0
 
 flutter:
   uses-material-design: true
