another big refactoring

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -135,4 +135,5 @@ analyzer:
     implicit-dynamic: true
   exclude:
     - lib/**/*.g.dart
+    - lib/setup.iconfig.dart
     - packages/**/lib/generated.dart
