--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,24 +8,31 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter:
     sdk: flutter
-  flutter_svg: ^0.17.4
-  keystore:
-    path: packages/keystore_ffi
   path_provider: ^1.6.5
-  flutter_screenutil: ^1.1.0
-  provider: ^4.1.0
-  injectable: ^0.3.0
+  flutter_screenutil: ^2.2.0
+  injectable: ^0.4.0+1
+  websafe_svg: ^1.1.0
   get_it: ^4.0.2
   shared_preferences: ">=0.5.0 <2.0.0"
+  intl: ^0.16.1
+  auto_route: ^0.6.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic: ^1.8.0
-  injectable_generator: ^0.3.5
+  injectable_generator: ^0.4.1
+  auto_route_generator: ^0.6.0
   build_runner: ^1.9.0
+  flutter_launcher_icons: "^0.7.5"
 
 flutter:
   uses-material-design: true
   assets:
-    - assets/
+    - assets/svg/
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+  adaptive_icon_background: "#ffffff"
