add sunshine identity

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,6 +1,6 @@
 [env]
 CARGO_MAKE_EXTEND_WORKSPACE_MAKEFILE = true
-CARGO_MAKE_WORKSPACE_INCLUDE_MEMBERS = ["native/keystore-ffi"]
+CARGO_MAKE_WORKSPACE_INCLUDE_MEMBERS = ["native/sunshine"]
 ANDROID_PLATFORM_VERSION = "28"
 LIB_OUT_DIR = "debug"
 TARGET_OS = "unknown"
