--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   shared_preferences: ">=0.5.0 <2.0.0"
   intl: ^0.16.1
   auto_route: ^0.6.0
+  url_launcher: ^5.5.0
+  sunshine_ffi:
+    path: ./packages/sunshine
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +33,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/svg/
+    - assets/chainspec.json
 
 flutter_icons:
   android: true
