dose not compile waiting for https://github.com/sunshine-protocol/sunshine/issues/18

--- a/cbindgen.toml
+++ b/cbindgen.toml
@@ -22,4 +22,4 @@ allow_constexpr = false
 crates = ["sunshine"]
 all_features = false
 default_features = true
-features = []
+features = ["faucet"]
