--- a/native/sunshine/Cargo.toml
+++ b/native/sunshine/Cargo.toml
@@ -11,10 +11,9 @@ edition = "2018"
 crate-type = ["rlib"]
 
 [dependencies]
-identity-ffi = { git = "https://github.com/sunshine-protocol/sunshine-identity", package = "sunshine-identity-ffi", features = ["faucet"] }
 bounty-ffi = { git = "https://github.com/sunshine-protocol/sunshine-bounty", package = "sunshine-bounty-ffi" }
+bounty-client = { git = "https://github.com/sunshine-protocol/sunshine-bounty", package = "test-client" }
 frusty-logger = { git =  "https://github.com/sunshine-protocol/frusty-logger" }
-client = { git = "https://github.com/sunshine-protocol/sunshine", package = "sunshine-client" }
 log = "^0.4"
 
 [features]
