--- a/packages/sunshine/pubspec.yaml
+++ b/packages/sunshine/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   ffi:
   isolate:
+  cbor: ^3.2.0
   frusty_logger:
     git: https://github.com/sunshine-protocol/frusty-logger.git
 dev_dependencies:
