--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   auto_route: ^0.6.0
   url_launcher: ^5.5.0
   http: ^0.12.2
+  http_extensions: ^0.1.2
+  http_extensions_cache: ^0.1.3
+  shimmer: ^1.1.1
   sunshine_ffi:
     path: ./packages/sunshine
   timeago:
