--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   http_extensions: ^0.1.2
   http_extensions_cache: ^0.1.3
   shimmer: ^1.1.1
+  flutter_markdown: ^0.4.3
   sunshine_ffi:
     path: ./packages/sunshine
   timeago:
