--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,4 @@
 members = ["native/*"]
 
 [patch.crates-io]
-keybase-keystore = { git = "https://github.com/sunshine-protocol/sunshine-identity" }
-substrate-keybase-keystore = { git = "https://github.com/sunshine-protocol/sunshine-identity" }
-sunshine-core = { git = "https://github.com/sunshine-protocol/sunshine-identity" }
+substrate-subxt = { git = "https://github.com/dvc94ch/substrate-subxt", branch = "fix-port" }
