--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/svg/
-    - assets/chainspec.json
+    # - assets/chainspec.json
 
 flutter_icons:
   android: true
