install WASM target

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
           override: true
           components: rustfmt
 
+      - name: Install WASM Target
+        run: rustup target add wasm32-unknown-unknown
+
       - name: Cache Cargo
         uses: actions/cache@v2
         with:
