--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
+  test: any
   pedantic: ^1.8.0
   injectable_generator: ^0.4.1
   auto_route_generator: ^0.6.0
