run android tests

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -131,6 +131,7 @@ jobs:
         run: flutter build apk --debug
 
       - name: Run Tests (Android Emulator)
+        if: steps.create_release.outputs.upload_url == null
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 28
